Create service worker

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="icons/apple-icon-180.png">
     <title>JED_GradeTracker</title>
     <!-- Font Awesome CDN-->
     <script src="https://kit.fontawesome.com/5438fccc05.js" crossorigin="anonymous"></script>
