--- a/views/semesters_edit.ejs
+++ b/views/semesters_edit.ejs
@@ -34,12 +34,25 @@
 
                 <div class="input-group d-flex justify-content-between align-items-center">
                     <span class="input-group-text">Name</span>
-                    <input type="text" name="semesterName" id="" placeholder="Fall 2019" class="form-control">
+                    <input type="text" name="semesterName" id="" placeholder="Fall 2019" class="form-control" autocomplete="off">
                     <input type="submit" name="semesterEdit" class="btn btn-outline-danger" value="Delete"></input>
                 </div>
-                
+            </li>
+            <li class="py-3 list-group-item list-group-item-action">
 
+                <div class="input-group d-flex justify-content-between align-items-center">
+                    <span class="input-group-text">Name</span>
+                    <input type="text" name="semesterName" id="" autocomplete="off" placeholder="Fall 2019" class="form-control">
+                    <input type="submit" name="semesterEdit" class="btn btn-outline-danger" value="Delete"></input>
+                </div>
+            </li>
+            <li class="py-3 list-group-item list-group-item-action">
 
+                <div class="input-group d-flex justify-content-between align-items-center">
+                    <span class="input-group-text">Name</span>
+                    <input type="text" name="semesterName" id="" autocomplete="off" placeholder="Fall 2019" class="form-control">
+                    <input type="submit" name="semesterEdit" class="btn btn-outline-danger" value="Delete"></input>
+                </div>
             </li>
         </ul>
     </form>
