--- a/views/courses_edit.ejs
+++ b/views/courses_edit.ejs
@@ -4,7 +4,7 @@
     <header class="p-3" id="courses_Header">
         <ul class="d-flex flex-row justify-content-between">
             <li><a href="/">Semester Name</a></li>
-            <li><a href="/courses_edit">Edit</a></li>
+            <li><a href="">Save</a></li>
         </ul>
     </header>
 
@@ -23,9 +23,16 @@
         </div>
     </section>
 
+    <section class="addNew text-center py-3">
+        <a href="/courses_add">
+            <p>New Course</p>
+            <i class="fas fa-plus-circle fa-lg"></i>
+        </a>
+    </section>
+
     <section id="course_List">
-        <a href="/grades" class="course_item py-3 border-bottom border-secondary">
-            <div class="d-flex flex-row ms-4">
+        <div class="d-flex justify-content-between course_item border-bottom border-secondary px-4 py-2">
+            <div class="d-flex flex-row">
                 <div>
                     <p class="py-2">WEB 322</p>
                     <p> <span>88.9</span>% </p>
@@ -36,10 +43,15 @@
                     <p>A</p>
                 </div>
             </div>
-        </a>
 
-        <a href="#" class="course_item py-3 border-bottom border-secondary">
-            <div class="d-flex flex-row ms-4">
+            <div class="align-self-center">
+                <form action="" method="post">
+                    <button type="submit" class="btn btn-outline-danger my-2 p-1">Delete</button>
+                </form>
+            </div>
+        </div> 
+        <div class="d-flex justify-content-between course_item border-bottom border-secondary px-4 py-2">
+            <div class="d-flex flex-row">
                 <div>
                     <p class="py-2">WEB 322</p>
                     <p> <span>88.9</span>% </p>
@@ -50,9 +62,14 @@
                     <p>A</p>
                 </div>
             </div>
-        </a>
 
-        
+            <div class="align-self-center">
+                <form action="" method="post">
+                    <button type="submit" class="btn btn-outline-danger my-2 p-1">Delete</button>
+                </form>
+            </div>
+        </div> 
+
     </section>
     <%- include('partials/navbar.ejs')  %> 
 </main>
