--- a/views/semesters.ejs
+++ b/views/semesters.ejs
@@ -1,10 +1,10 @@
 <%- include('partials/header.ejs')  %> 
 
-<section>
-    <nav class="container">
+<main>
+    <nav class="py-1 px-3">
         <div class="row  py-3">
             <div class="col text-start">
-                <a href="#">
+                <a href="/courses">
                     <i class="fas fa-times-circle fa-lg"></i>
                 </a>
             </div>
@@ -23,28 +23,28 @@
     <div class="text-center py-3">
         <p>Tap a Semester to make it the current semester</p>
     </div>
-    <main>
+    <section>
         <ul class="list-group">
             <a href="#">
-                <li class="py-3 list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <li class="p-3 list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     Fall 2019
-                    <span class="badge bg-success badge-pill">GPA: 3.8</span>
+                    <span class="badge bg-success badge-pill p-2">GPA: 3.8</span>
                 </li>
             </a>
             <a href="#">
-                <li class="py-3 list-group-item list-group-item-action d-flex justify-content-between align-items-cente active">
+                <li class="p-3 list-group-item list-group-item-action d-flex justify-content-between align-items-cente active">
                     Fall 2018
-                    <span class="badge bg-warning badge-pill">GPA: 2.8</span>
+                    <span class="badge bg-warning badge-pill p-2">GPA: 2.8</span>
                 </li>
             </a>
             <a href="#">
-                <li class="py-3 list-group-item list-group-item-action d-flex justify-content-between align-items-cente">
+                <li class="p-3 list-group-item list-group-item-action d-flex justify-content-between align-items-cente">
                     Fall 2020
-                    <span class="badge bg-danger badge-pill">GPA: 1.4</span>
+                    <span class="badge bg-danger badge-pill p-2">GPA: 1.4</span>
                 </li>
             </a>
         </ul>
-    </main>
-</section>
+    </section>
+</main>
 
 <%- include('partials/footer.ejs')  %> 
