--- a/views/semesters_add.ejs
+++ b/views/semesters_add.ejs
@@ -5,13 +5,13 @@
         <nav>
             <div class="row  p-3">
                 <div class="col text-start">
-                    <a href="/">
+                    <a href="/edit_semesters">
                         <i class="fas fa-times-circle fa-lg"></i>
                     </a>
                 </div>
     
                 <div class="col text-center">
-                    <span>Semesters</span>
+                    <span>Add New Semesters</span>
                 </div>
     
                 <div class="col text-end">
@@ -22,13 +22,6 @@
             </div>
         </nav>
 
-        <div class="text-center py-3">            
-            <a href="/add_semesters">
-                <p>Add a new semester</p> 
-                <i class="fas fa-plus-circle fa-lg"></i>
-            </a>
-        </div>
-
         <ul class="list-group">
             <li class="py-3 list-group-item">
 
@@ -36,18 +29,6 @@
                     <span class="input-group-text p-1">Name</span>
 
                     <input type="text" name="semesterName" id="" placeholder="Fall 2019" class="form-control p-1" autocomplete="off">
-
-                    <input type="submit" name="semesterEdit" class="btn btn-danger p-1" value="Delete"></input>
-                </div>
-            </li>
-            <li class="py-3 list-group-item">
-
-                <div class="input-group d-flex justify-content-between align-items-center px-4">
-                    <span class="input-group-text p-1">Name</span>
-
-                    <input type="text" name="semesterName" id="" placeholder="Fall 2019" class="form-control p-1" autocomplete="off">
-
-                    <input type="submit" name="semesterEdit" class="btn btn-danger p-1" value="Delete"></input>
                 </div>
             </li>
         </ul>
