--- a/views/gpa.ejs
+++ b/views/gpa.ejs
@@ -5,7 +5,7 @@
         <ul class="d-flex flex-row justify-content-between">
             <li><a href="/">Back</a></li>
             <li>GPA Calculator</li>
-            <li><a href="">Scale</a></li>
+            <li><a href="/scales">Scale</a></li>
         </ul>
     </header>
 
