--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
                 <p>CGPA</p>
             </div>
         </a>
-        <a href="#" class="col">
+        <a href="/settings" class="col">
             <div>
                 <i class="fas fa-cog fa-lg"></i>
                 <p>Settings</p>
